# challenge

./: .gitignore  README.md  agente_leyes.md
chatbot/: requirements.txt
chatbot/data/02_intermediate/: Constitucion Española.json  Código Civil.json  Código Penal.json
chatbot/data/03_memories/: short_term_memory.db  short_term_memory.db-shm  short_term_memory.db-wal  usuarios.txt
chatbot/data/04_model_output/: bm25_values.json
chatbot/data/chatbot_images/: Chatbot Leyes.docx
chatbot/notebooks/01_eda/: 00_parsing.ipynb  01_ingestion.ipynb
chatbot/notebooks/04_modeling/: 02_chatbot.ipynb
chatbot/notebooks/05_results/: chatbot.py
chatbot/src/d00_utils/: evaluation.py  parsing.py  utils.py
chatbot/src/d01_data/: data.py  graph.py  prompts.py  pydantic_classes.py
chatbot/src/d03_modeling/: modeling.py
cv/: detect.py  dockerfile  pyproject.toml  requirements.txt
